--- a/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
@@ -21,23 +21,23 @@
             <div class="grid">
                 <div class="wrap-box">
                     <div class="box">
-                        <img src="{{ asset('bundles/sitemain/frontend/images/icon1.png') }}" alt=""/>
+                        <img src="{{ asset('bundles/sitemain/frontend/images/icon1.png') }}" alt="" width="127px" height="124px"/>
                         <div class="name">опыт 15 лет</div>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
-                        <img src="{{ asset('bundles/sitemain/frontend/images/icon2.png') }}" alt=""/>
+                        <img src="{{ asset('bundles/sitemain/frontend/images/icon2.png') }}" alt="" width="130px" height="124px"/>
                         <div class="name">клиенты - первые лица страны</div>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
-                        <img src="{{ asset('bundles/sitemain/frontend/images/icon3.png') }}" alt=""/>
+                        <img src="{{ asset('bundles/sitemain/frontend/images/icon3.png') }}" alt="" width="109px" height="124px"/>
                         <div class="name">гарантия на все виды работ</div>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
-                        <img src="{{ asset('bundles/sitemain/frontend/images/icon4.png') }}" alt=""/>
-                        <div class="name">постэксплуатационное обслуживание</div>
+                        <img src="{{ asset('bundles/sitemain/frontend/images/icon4.png') }}" alt="" width="89px" height="133px"/>
+                        <div class="name last">постэксплуатационное обслуживание</div>
                     </div>
                 </div>
             </div>
@@ -48,22 +48,54 @@
                 <div class="wrap-box">
                     <div class="box">
                         <div class="name">Безопасность</div>
-                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
+                        <div class="wrap-img">
+                            <img src="{{ asset('bundles/sitemain/frontend/images/icon2-1.png') }}" alt="" width="118px" height="120px"/>
+                        </div>
+                        <div class="description">
+                            Наша продукция соответствует
+                            самым строгим требованиям
+                            безопасности и имеет
+                            все сертификаты.
+                        </div>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
                         <div class="name">Долговечность</div>
-                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
+                        <div class="wrap-img">
+                            <img src="{{ asset('bundles/sitemain/frontend/images/icon2-2.png') }}" alt="" width="149px" height="121px"/>
+                        </div>
+                        <div class="description">
+                            Мы выбираем только
+                            самых надежный поставщиков,
+                            используем качественные
+                            и дорогие материалы.
+                        </div>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
                         <div class="name">Изящество</div>
-                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
+                        <div class="wrap-img">
+                            <img src="{{ asset('bundles/sitemain/frontend/images/icon2-3.png') }}" alt="" width="156px" height="152px"/>
+                        </div>
+                        <div class="description">
+                            Мы можем предложить как самые
+                            современные решения в дизайне,
+                            так и классику, в зависимости
+                            от ваших предпочтений.
+                        </div>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
                         <div class="name">Окупаемость</div>
-                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
+                        <div class="wrap-img">
+                            <img src="{{ asset('bundles/sitemain/frontend/images/icon2-4.png') }}" alt="" width="120px" height="117px"/>
+                        </div>
+                        <div class="description">
+                            Выбирая качество, вы в итоге
+                            сэкономите, потому что наша
+                            продукция прослужит вам
+                            многие годы.
+                        </div>
                     </div>
                 </div>
             </div>
