--- a/src/Site/MainBundle/Resources/views/Frontend/Products/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Products/index.html.twig
@@ -5,6 +5,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
+    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/sitemain/frontend/scripts/SidebarTransitions/component.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/sitemain/frontend/styles/children.css') }}">
 {% endblock %}
 
@@ -12,6 +13,14 @@
     <div class="wrap-video">
         <div class="video" id="video"></div>
     </div>
+{% endblock %}
+
+{% block stMenu %}
+    <nav class="st-menu st-menu-news st-effect-1" id="st-menu-block">
+        <p>
+            Текст
+        </p>
+    </nav>
 {% endblock %}
 
 {% block content %}
@@ -35,6 +44,37 @@
                 <div class="wrap_text">
                     <div class="text">
                         {{ p.text|raw }}
+                        <div class="blocks">
+
+                            <h2 class="head-block">три этапа</h2>
+
+                            <div class="wrap-block">
+                                <div class="block">
+                                    <img src="{{ asset('bundles/sitemain/frontend/images/block.png') }}" alt=""/>
+                                </div>
+                            </div><div class="wrap-block">
+                                <div class="block">
+                                    <img src="{{ asset('bundles/sitemain/frontend/images/block.png') }}" alt=""/>
+                                </div>
+                            </div><div class="wrap-block">
+                                <div class="block">
+                                    <img src="{{ asset('bundles/sitemain/frontend/images/block.png') }}" alt=""/>
+                                </div>
+                            </div><div class="wrap-block">
+                                <div class="block">
+                                    <img src="{{ asset('bundles/sitemain/frontend/images/block.png') }}" alt=""/>
+                                </div>
+                            </div><div class="wrap-block">
+                                <div class="block">
+                                    <img src="{{ asset('bundles/sitemain/frontend/images/block.png') }}" alt=""/>
+                                </div>
+                            </div><div class="wrap-block">
+                                <div class="block">
+                                    <img src="{{ asset('bundles/sitemain/frontend/images/block.png') }}" alt=""/>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
                 <!-- end Text -->
